[gd_scene load_steps=4 format=3 uid="uid://gqn6k5a8e2pp"]

[ext_resource type="Script" path="res://Scripts/Autoload/DebugManager.gd" id="1_6su82"]
[ext_resource type="FontFile" uid="uid://bhqyq3yxbvqkd" path="res://Assets/Sprites/UI/HUD/HUDFont.png" id="3_64cck"]

[sub_resource type="Theme" id="Theme_rw6kw"]
default_font = ExtResource("3_64cck")

[node name="DebugManager" type="Node"]
process_mode = 3
script = ExtResource("1_6su82")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Container" type="VBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_rw6kw")

[node name="FPS" type="Label" parent="UI/Container"]
layout_mode = 2
uppercase = true

[node name="PlayerState" type="Label" parent="UI/Container"]
layout_mode = 2
uppercase = true

[node name="PlayerPowerState" type="Label" parent="UI/Container"]
layout_mode = 2
uppercase = true

[node name="PlayerPosition" type="Label" parent="UI/Container"]
layout_mode = 2
uppercase = true

[node name="PlayerVelocity" type="Label" parent="UI/Container"]
layout_mode = 2
uppercase = true

[node name="CurrentHeldItem" type="Label" parent="UI/Container"]
layout_mode = 2

[node name="CurrentLevel" type="Label" parent="UI/Container"]
layout_mode = 2

[node name="PlayerAnimations" type="Label" parent="UI/Container"]
layout_mode = 2
